@@ -3,7 +3,6 @@ use strict;
 use warnings;
 use 5.010;
 use ExtUtils::MakeMaker::CPANfile;
-use Pod::Text;
 
 WriteMakefile(
     NAME         => 'Bifcode',
@@ -23,11 +22,3 @@ WriteMakefile(
         },
     },
 );
-
-if ( -e '.git' ) {
-    my $parser = Pod::Text->new( sentence => 0 );
-
-    # Read POD from file.pod and write to file.txt.
-    $parser->parse_from_file( 'lib/Bifcode.pm', 'README' );
-}
-
